--- a/app/src/main/res/layout/product_list_content.xml
+++ b/app/src/main/res/layout/product_list_content.xml
@@ -10,14 +10,14 @@
         style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
         card_view:cardUseCompatPadding="true">
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/product_image_box"
             android:layout_width="84dp"
             android:layout_height="84dp"
-            android:gravity="center_horizontal"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
             android:padding="2dp">
 
             <ImageView
@@ -25,14 +25,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="fitCenter" />
-        </LinearLayout>
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/tv_subcategory_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/product_image_box"
-            android:layout_gravity="center_horizontal"
+            android:layout_centerHorizontal="true"
+            android:textAlignment="center"
             android:text="TextView" />
 
         <TextView
@@ -40,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_subcategory_name"
-            android:layout_gravity="center"
+            android:layout_centerHorizontal="true"
             android:text="TextView"
             android:textColor="#000000"
             android:textStyle="bold" />
