--- a/app/src/main/res/layout/content_product_detail.xml
+++ b/app/src/main/res/layout/content_product_detail.xml
@@ -305,6 +305,13 @@
 
             </LinearLayout>
 
+            <include
+                android:layout_gravity="bottom"
+                android:layout_marginTop="8dp"
+                layout="@layout/layout_sms"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
         </android.support.v7.widget.LinearLayoutCompat>
 
 
