--- a/app/src/main/res/layout/content_seller_profile.xml
+++ b/app/src/main/res/layout/content_seller_profile.xml
@@ -255,7 +255,28 @@
 
 
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
+                    android:clickable="true"
+                    android:focusable="true"
 
+                    android:id="@+id/seller_products"
+                    android:layout_height="wrap_content">
+                    <android.support.v7.widget.CardView
+
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:padding="@dimen/origin_10dp"
+                            android:layout_width="match_parent"
+                            android:text="Ver productos de este vendedor"
+                            android:gravity="center"
+                            android:layout_height="wrap_content" />
+
+                    </android.support.v7.widget.CardView>
+                </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
