--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -34,6 +34,7 @@
         app:fabSize="mini"
         app:menu_colorNormal="@color/green_accent"
         app:menu_colorPressed="@color/green_light"
+        android:visibility="gone"
         app:menu_icon="@drawable/ic_shopping">
 
         <com.github.clans.fab.FloatingActionButton
