--- a/app/src/main/res/layout/register_home_item.xml
+++ b/app/src/main/res/layout/register_home_item.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:id="@+id/register"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="350dp"
         android:scaleType="centerCrop"
         android:src="@drawable/register" />
 </LinearLayout>
